checkin temp changes

--- a/source/DasBlog.Web.UI/Views/Shared/_HtmlThemePartial.cshtml
+++ b/source/DasBlog.Web.UI/Views/Shared/_HtmlThemePartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DasBlog.Services;
 @inject IDasBlogSettings dasBlogSettings
 
-<link rel="stylesheet" href="~/css/site.css" />
+<link rel="stylesheet" href="@dasBlogSettings.RelativeToRoot("~/css/site.css")" />
 <link rel="stylesheet" href="@dasBlogSettings.ThemeCssUrl" />
